--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
   "dependencies": {
     "canvas": "^2.7.0",
     "dotenv": "^8.2.0"
+  },
+  "devDependencies": {
+    "@types/dotenv": "^8.2.0",
+    "@types/node": "^14.14.31"
   }
 }
